dashboard added and README updated

--- a/vuejs-babysitter-app-FrontEnd/.gitignore
+++ b/vuejs-babysitter-app-FrontEnd/.gitignore
@@ -9,10 +9,12 @@ lerna-debug.log*
 
 node_modules
 dist
+src/components/un-used
 dist-ssr
 *.local
 .env
 .vscode
+*.code-workspace
 
 # Editor directories and files
 .vscode/*
