--- a/vuejs-babysitter-app-FrontEnd/package.json
+++ b/vuejs-babysitter-app-FrontEnd/package.json
@@ -16,6 +16,7 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.5.0",
     "connect-history-api-fallback": "^2.0.0",
+    "sweetalert2": "^11.7.31",
     "vue": "^3.3.4",
     "vue-cookies": "^1.8.3",
     "vue-router": "^4.2.4",
